<resources>
    <string name="app_name">SoloTabOSM</string>
    <string name="nav_open">Abre</string>
    <string name="nav_close">Fecha</string>
    <string name="menu">Receber Pontos de Amostragem</string>
    <string name="salvar">Enviar dados dos pontos</string>
    <string name="continuar">Continuar coleta</string>
    <string name="username">Usuário</string>
    <string name="password">Senha</string>
    <string name="bd">Banco de Dados </string>
    <string name="login">Entrar</string>
    <string name="id">Amostra: </string>
    <string name="amostra">Ponto: </string>
    <string name="projeto">Projeto: </string>
    <string name="alvo">Alvo: </string>
    <string name="duplicata">Duplicata: </string>
    <string name="branco">Branco: </string>
    <string name="padrao">Padrão: </string>
    <string name="reamostra">Reamostra: </string>
    <string name="tipo">Tipo: </string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="elev">Elevação: </string>
    <string name="datum">Datum: </string>
    <string name="zona">Zona: </string>
    <string name="ns">Norte ou Sul: </string>
    <string name="tipoperfil">Tipo Perfil: </string>
    <string name="profm">Prof.(m): </string>
    <string name="cor">Cor: </string>
    <string name="tipoamostra">Tipo Am.: </string>
    <string name="granul">Granul.: </string>
    <string name="relevo">Relevo: </string>
    <string name="frag">Fragmen.: </string>
    <string name="mag">Magnet.: </string>
    <string name="veg">Veget.: </string>
    <string name="peso">Peso(Kg): </string>
    <string name="obs">Observações: </string>
    <string name="insere">Inserir Coleta </string>
    <string name="resp">Resp.: </string>
    <string name="data">Data: </string>
    <string name="coletado">Executado?: </string>
    <string name="srid">Zona UTM: </string>
    <string name="host">Host </string>
</resources>